add missing files